--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 spring.application.name=ACME Learning Center Platform
 
 # Spring DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/learning-center-os?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://dpg-d19od9jipnbc7399c5cg-a.oregon-postgres.render.com/learningdb_5yub
+spring.datasource.username=luser
+spring.datasource.password=dtqk3tUkzCivOnNXKEwOd7DGu4Qvkc5H
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Spring Data JPA Configuration
 spring.jpa.show-sql=true
@@ -13,7 +13,7 @@ spring.jpa.show-sql=true
 #Spring Data JPA Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.physical-strategy=com.acme.center.platform.shared.infrastructure.persistence.jpa.configuration.strategy.SnakeCaseWithPluralizedTablePhysicalNamingStrategy
 
 # Application Information for Documentation
